@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Model::DBIC::Schema
 
+        - check loader args after connect_info against loader methods and remove
+          them from connect_info
+
 0.52  Thu Jul 28 22:07:38 UTC 2011
         - fix a bug in loader args reading after connect_info (skip structs)
 
